package com.narxoz.rpg.enemy;

public class Goblin extends BasicEnemy {
    public Goblin() {
        super("Goblin", 12, 60);
    }
}